<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.LoginScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="205dp"
                android:layout_height="181dp"
                android:layout_gravity="center"
                android:src="@drawable/logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#FFB3B3B3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email_gray_24dp"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColorHint="#FFB3B3B3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_gray_24dp"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="12"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/red_rounded_solid"
                android:fontFamily="@font/calibri"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

<!--    <LinearLayout-->
<!--        android:id="@+id/linearLayout"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:layout_marginStart="24dp"-->
<!--        android:layout_marginEnd="24dp"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <ImageView-->
<!--            android:id="@+id/imgLogo"-->
<!--            android:layout_width="205dp"-->
<!--            android:layout_height="181dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:src="@drawable/logo" />-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/email_til"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:textColorHint="#FFB3B3B3"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

<!--            <EditText-->
<!--                android:id="@+id/txtEmail"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:drawableStart="@drawable/ic_email_gray_24dp"-->
<!--                android:drawablePadding="16dp"-->
<!--                android:fontFamily="@font/calibri"-->
<!--                android:hint="@string/email"-->
<!--                android:inputType="textEmailAddress"-->
<!--				android:maxLength="30"-->
<!--                android:textSize="16sp" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/password_til"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="12dp"-->
<!--            android:textColorHint="#FFB3B3B3"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--            app:passwordToggleEnabled="true">-->

<!--            <EditText-->
<!--                android:id="@+id/txtPassword"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:drawableStart="@drawable/ic_lock_gray_24dp"-->
<!--                android:drawablePadding="16dp"-->
<!--                android:fontFamily="@font/calibri"-->
<!--                android:hint="@string/password"-->
<!--                android:inputType="textPassword"-->
<!--                android:maxLines="1"-->
<!--				android:maxLength="12"-->
<!--                android:textSize="16sp" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <Button-->
<!--            android:id="@+id/btnLogin"-->
<!--            android:layout_width="210dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginBottom="12dp"-->
<!--            android:background="@drawable/red_rounded_solid"-->
<!--            android:fontFamily="@font/calibri"-->
<!--            android:text="@string/sign_in"-->
<!--            android:textAllCaps="false"-->
<!--            android:textColor="#ffffff"-->
<!--            android:textSize="18sp"-->
<!--            android:textStyle="bold" />-->
<!--    </LinearLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>